maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:21: error: ':' expected but ',' found.
def numerotation(x,y,i)
                  ^JediEscaper:59: error: identifier expected but '}' found.
}
^